# System-Design-Co-Pilot

./: .env.example  .gitignore  DEVELOPER_OPERATIONS.md  PROJECT_CONTEXT.md  Project_Execution_Guide.md  README.md  System_Design_CoPilot_Plan.md  docker-compose.yml  pyproject.toml
.cursor/commands/: align-with-plan.md  architecture-co-pilot-api.md  optimize-conversation-build.md
.cursor/rules/: project-context.mdc  system-design-copilot.mdc
.cursor/skills/architecture-co-pilot-api/: SKILL.md
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  deps.py  exceptions.py  logging_config.py  request_context.py
apps/api/app/db/: README.md  __init__.py  schema.sql  session.py
apps/api/app/db/models/: __init__.py
apps/api/app/graph/: __init__.py
apps/api/app/graph/docs/: Phase1_Product_LangGraph_Flow.md  Phase2_Architecture_LangGraph_Flow.md
apps/api/app/graph/phase1_product/: __init__.py  build.py  edges.py  json_extract.py  nodes.py  prompts.py  routing.py  schemas.py  workflow.py
apps/api/app/graph/phase2_architecture/: README.md  __init__.py  build.py  edges.py  workflow.py
apps/api/app/graph/phase2_architecture/nodes/: __init__.py  llm_node.py  pattern.py  red_team.py  scalability.py  technology.py  tradeoffs.py
apps/api/app/graph/phase2_architecture/parsing/: __init__.py  extract.py
apps/api/app/graph/phase2_architecture/prompts/: __init__.py  pattern.py  red_team.py  scalability.py  shared.py  technology.py  tradeoffs.py
apps/api/app/graph/phase2_architecture/schemas/: __init__.py  pattern.py  red_team.py  scalability.py  technology.py  tradeoffs.py
apps/api/app/graph/state/: __init__.py  phase1.py  phase2.py
apps/api/app/http/: __init__.py  errors.py
apps/api/app/kafka/: KAFKA.md  README.md  __init__.py  envelope.py  producer.py  serialization.py  topics.py
apps/api/app/kafka/events/: __init__.py  agent_run.py  artifact.py  messaging.py  session.py
apps/api/app/middleware/: access_log.py  request_context.py
apps/api/app/routers/: health.py
apps/api/app/routers/architecture_copilot/: __init__.py  router.py  sessions.py
apps/api/app/schemas/: __init__.py  responses.py
apps/api/app/schemas/architecture_copilot/: __init__.py  sessions.py
apps/api/app/services/: __init__.py  db_ping.py  kafka_idempotency.py
apps/api/app/services/events/: __init__.py  publish.py
apps/api/app/services/llm/: __init__.py  guardrails.py  openai_provider.py  prompts.py  protocol.py
apps/api/app/services/phase1/: __init__.py  runner.py
apps/api/app/services/phase2/: __init__.py  runner.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260405_0001_initial_core_schema.py  20260406_0002_processed_kafka_events.py
apps/api/tests/unit/: test_kafka_envelope.py  test_phase1_graph.py  test_phase2_graph.py  test_phase2_runner.py  test_session_read_routes.py
apps/web/: FRONTEND_CONTEXT.md  next.config.ts  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/worker/: README.md
apps/worker/app/: __init__.py
apps/worker/worker_app/: __init__.py  kafka_out.py  main.py
architecture-co-pilot/: README.md
architecture-co-pilot/postman/collections/: Architecture-Co-Pilot.postman_collection.json  (+1 more)
devtools/: __init__.py  run_api.py  run_migrate.py  run_worker.py
docs/: Phase1_Product_LangGraph_Flow.md
scripts/: docker_up_postgres.ps1
(+22 files in other folders)
