[tool.poetry]
name = "system-design-copilot"
version = "0.1.0"
description = "System Design Co-Pilot monorepo — Poetry env at repo root, FastAPI via path dependency"
authors = ["System Design Co-Pilot"]
readme = "README.md"
packages = [{ include = "devtools" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
system-design-copilot-api = { path = "apps/api", develop = true }

[tool.poetry.scripts]
api = "devtools.run_api:main"
migrate = "devtools.run_migrate:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
