[project]
name = "system-design-copilot-api"
version = "0.1.0"
description = "FastAPI service for System Design Co-Pilot"
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
